k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: continuum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: continuum
  template:
    metadata:
      labels:
        app: continuum
    spec:
      containers:
        - name: continuum
          image: continuum:latest
          imagePullPolicy: Never 
          ports:
            - containerPort: 8080
