k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: continuum
spec:
  selector:
    app: continuum
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
